# nen2660

./: .gitignore  .htaccess  CONTRIBUTING.md  Gemfile  Makefile  README.md  _config.yaml  index.md  pyproject.toml
.devcontainer/: Dockerfile
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml
_data/: downloads.tsv  minimaal.yaml
_includes/: custom-head.html  def.html  download-button.html  prefixes.html  vocab.html
assets/css/: brand-color.scss
data/: nen2660-owl.ttl  nen2660-rdfs.ttl  nen2660-shacl.ttl  nen2660-skos.ttl
data/concat/: nen2660-lov-metadata.ttl  nen2660.json  nen2660.rdf  nen2660.trig  nen2660.ttl
data/examples/: ijsselbrug.ttl  liggerbrug.ttl  wegennetwerk.ttl  ziekenhuis.ttl
data/metadata/: lov.ttl
pages/: def.md  downloads.md  endpoint.md  term.md
src/rdflibplugins/: trig.py
